big round, call watson auto on subreddit load, disable dao home

--- a/client/reddit_page.jade
+++ b/client/reddit_page.jade
@@ -43,6 +43,7 @@ template(name='reddit_page')
                         |!{data.body_html}
                 if data.link_url
                     img.ui.image(src=data.link_url)
+                img.ui.image(src=data.url)
                 // div(style='position:relative; padding-bottom:calc(125.00% + 44px)')
                 //     iframe(src='https://gfycat.com/ifr/MeanFatAmurratsnake' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen)
                 |{{selftext}}
