--- a/client/subreddit.jade
+++ b/client/subreddit.jade
@@ -80,6 +80,7 @@ template(name='subreddit')
                             .spacer
                             .spacer
                 .four.wide.column.scrolling
+                    img.ui.small.image(src=icon_img)
                     .ui.inline.header.pull_latest #{display_name}
                     .ui.small.inline.header #{title}
                     img.ui.inline.image(src=header_img)
