--- a/client/reddit_page.jade
+++ b/client/reddit_page.jade
@@ -6,66 +6,67 @@ template(name='reddit_page')
                     i.chevron.left.icon
                 span.ui.pointer.text.f13.zoomer(class=post_header_class) !{data.title} #{data.link_title}
                 // .ui.basic.circular.button.get_post permalink #{permalink}
-                .rounded.full
-                    |!{embed}
-                if is_image
-                    img.ui.centered.rounded.image(src=data.url)
-                else if watson.metadata.image
-                    img.ui.rounded.image(src=watson.metadata.image)
-                // small #{max_emotion_name}
-                if is_video
-                    div
-                    // iframe(width="100%" height="600" src="https://v.redd.it/9vk3khyb08e51/DASH_360.mp4?source=fallback" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
-                    iframe(width="100%" height="600" src=url frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
-                +skve k='doc_section' v='main' l='main' i='content'
-                +skve k='doc_section' v='preview' l='preview' i='content'
-                if skv_is 'doc_section' 'preview'
-                    iframe(width="100%" height="500" src=url frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)        
-                .ui.label
-                    | #{data.domain}
-                .spacer
-                // img(src=url)
-                |!{data.html}
-                .spacer
-                if parsed_selftext_html
-                    .ui.segment
-                        |!{parsed_selftext_html}
-                if data.selftext
-                    // .ui.segment
-                    |{{#markdown}} {{data.selftext}} {{/markdown}}
-                else if data.body
-                    div
-                    .ui.segment
-                        |{{nl2br data.body}}
-                else if data.body_html
-                    div
-                    .ui.segment
-                        |!{data.body_html}
-                if data.link_url
-                    img.ui.image(src=data.link_url)
-                img.ui.image(src=data.url)
-                // div(style='position:relative; padding-bottom:calc(125.00% + 44px)')
-                //     iframe(src='https://gfycat.com/ifr/MeanFatAmurratsnake' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen)
-                |{{selftext}}
-                .rounded
-                    |!{embed}
-                // +convert
-                .spacer
-                // a.ui.icon.big.basic.button(href=url target='_window' title=domain)
-                //     i.external.icon
-                //     |view site 
-                //     |#{data.domain}
-                // a.ui.center.aligned.header(href=url target='_window' class=post_header_class title=url) #{title}
-
-                // .spacer
-                // div
-                if tone
-                    +tone
-                    // +skve k='doc_section' v='money' l='money' i='money'
-                    // if skv_is 'doc_section'
-                |#{tags.length}
-                each tags
-                    +flat_tag_selector
+                .scrolling
+                    .rounded.full
+                        |!{embed}
+                    if is_image
+                        img.ui.centered.rounded.image(src=data.url)
+                    else if watson.metadata.image
+                        img.ui.rounded.image(src=watson.metadata.image)
+                    // small #{max_emotion_name}
+                    if is_video
+                        div
+                        // iframe(width="100%" height="600" src="https://v.redd.it/9vk3khyb08e51/DASH_360.mp4?source=fallback" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+                        iframe(width="100%" height="600" src=url frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+                    +skve k='doc_section' v='main' l='main' i='content'
+                    +skve k='doc_section' v='preview' l='preview' i='content'
+                    if skv_is 'doc_section' 'preview'
+                        iframe(width="100%" height="500" src=url frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)        
+                    .ui.label
+                        | #{data.domain}
+                    .spacer
+                    // img(src=url)
+                    |!{data.html}
+                    .spacer
+                    if parsed_selftext_html
+                        .ui.segment
+                            |!{parsed_selftext_html}
+                    if data.selftext
+                        // .ui.segment
+                        |{{#markdown}} {{data.selftext}} {{/markdown}}
+                    else if data.body
+                        div
+                        .ui.segment
+                            |{{nl2br data.body}}
+                    else if data.body_html
+                        div
+                        .ui.segment
+                            |!{data.body_html}
+                    if data.link_url
+                        img.ui.image(src=data.link_url)
+                    img.ui.image(src=data.url)
+                    // div(style='position:relative; padding-bottom:calc(125.00% + 44px)')
+                    //     iframe(src='https://gfycat.com/ifr/MeanFatAmurratsnake' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen)
+                    |{{selftext}}
+                    .rounded
+                        |!{embed}
+                    // +convert
+                    .spacer
+                    // a.ui.icon.big.basic.button(href=url target='_window' title=domain)
+                    //     i.external.icon
+                    //     |view site 
+                    //     |#{data.domain}
+                    // a.ui.center.aligned.header(href=url target='_window' class=post_header_class title=url) #{title}
+    
+                    // .spacer
+                    // div
+                    if tone
+                        +tone
+                        // +skve k='doc_section' v='money' l='money' i='money'
+                        // if skv_is 'doc_section'
+                    |#{tags.length}
+                    each tags
+                        +flat_tag_selector
             .four.wide.column
                 if in_dev
                     +print_this
