--- a/client/reddit_page.jade
+++ b/client/reddit_page.jade
@@ -66,7 +66,7 @@ template(name='reddit_page')
                         // if skv_is 'doc_section'
                     |#{tags.length}
                     each tags
-                        +flat_tag_selector
+                        +flat_sub_tag_selector
             .four.wide.column
                 if in_dev
                     +print_this
